--- a/src/styles/pages/Checkout.scss
+++ b/src/styles/pages/Checkout.scss
@@ -4,6 +4,11 @@
     grid-template-columns: 100%;
     grid-template-rows: 9.4rem auto auto;
 }
+.checkout__products {
+    max-height: 40rem;
+    overflow-y: scroll;
+    overscroll-behavior-y: contain;
+}
 .checkout--empty {
     display: flex;
     justify-content: center;
@@ -41,6 +46,11 @@
     .checkout--empty h1 {
         font-size: $medium;
     }
+    .checkout__products {
+        max-height: 50rem;
+        display: grid;
+        justify-items: center;
+    }
 }
 @media (min-width: 1024px) {
     .checkout {
@@ -68,6 +78,7 @@
         font-size: $large;
     }
     .checkout__products {
+        max-height: 90rem;
         margin-bottom: 3rem;
     }
 }
